# omega

./: .env.example  .gitignore  Cargo.toml  High level Blueprint 3331fd33f61480ca80b0ca39f283d759.md  Makefile  README.md  council-report-20260427-1436.html  council-transcript-20260427-1436.md  features-new.md  req.txt
docs/: BUILD_AND_DISTRIBUTION.md  COST_ESTIMATION.md  FEATURES.md  GTM_REGION_CHANNELS_AND_FIRST_CUSTOMERS.md  ICP.md  JUST_RELEASE_MINIMAL_COST.md  P0_IMPLEMENTATION_PLAN.md  PAYMENTS_AND_PRICING_SETUP.md  ROADMAP.md
logs/: capture-session-1774954337.json  capture-session-1774956384.json  capture-session-1774957521.json  capture-session-1774958282.json  phase2-from-1774957521.json  phase2-hardened.json  phase2-hash-after-cloud-switch.json  phase2-hash-after-gemini.json  phase2-ingestion-1774959308.json  phase2-ingestion-1775046571.json  phase2-ingestion-1775049537.json  phase2-ingestion-1775072320.json  phase2-ingestion-1775072501.json  phase2.db  phase3-stitching-1775049815.json  phase3-stitching-1775054688.json  phase3-stitching-1775072369.json  phase3-stitching-1775072542.json  phase4-summaries-1775073036.json  phase4-summaries-1775079873.json  phase4-summaries-1775079952.json  phase4-summaries-1775080170.json
scripts/: run-desktop-clean.sh  run-desktop.sh
src/: actions.rs  app_commands.rs  app_db.rs  app_models.rs  capture_live_status.rs  ide_context.rs  lib.rs  main.rs  models.rs  openai_compat_url.rs  phase2.rs  phase3.rs  phase4.rs  phash.rs  privacy_config.rs  sensor.rs  usage.rs
ui/: index.html  package-lock.json  package.json  (+2 more)
(+20 files in other folders)
