[package]
name = "sensor_layer"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5"
screenshots = "0.8"
crossbeam-channel = "0.5"
ctrlc = "3.4"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"

