[package]
name = "sensor_layer"
version = "0.1.0"
edition = "2021"
# Local HTTP server for the Electron UI (`omega-api`). Phase 1 capture: `cargo run --bin sensor_layer`.
default-run = "omega-api"

[dependencies]
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5"
screenshots = "0.8"
crossbeam-channel = "0.5"
ctrlc = "3.4"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "omega-api"
path = "src/bin/omega_api.rs"
